--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scalping</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script> <!-- Adapter pour les dates -->
-    <style>
+<html lang="fr"> 
+ <head> 
+  <meta charset="UTF-8"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <title>Scalping</title> 
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script> <!-- Adapter pour les dates --> 
+  <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #181818; /* Fond sombre pour un style trading */
+            background-color: #181818;
             color: #fff;
             margin: 0;
             padding: 0;
@@ -21,16 +21,10 @@
         }
         h1 {
             text-align: center;
-            color: #00D1B2; /* Couleur principale pour le titre */
+            color: #00D1B2;
             margin-bottom: 40px;
         }
-        .info {
-            background-color: #282828; /* Fond des infos */
-            border-radius: 8px;
-            padding: 20px;
-            margin-bottom: 30px;
-        }
-        .tp-sl-info {
+        .info, .tp-sl-info {
             background-color: #282828;
             border-radius: 8px;
             padding: 20px;
@@ -59,29 +53,9 @@
         }
         #price-chart {
             margin-top: 40px;
-            height: 500px; /* Plus grand pour un graphique visible */
+            height: 500px;
             background-color: #222;
             border-radius: 10px;
-        }
-        .pair-name {
-            font-weight: bold;
-            font-size: 20px;
-            color: #fff;
-        }
-        .signal {
-            font-weight: bold;
-            font-size: 18px;
-            color: #00D1B2;
-        }
-        .value {
-            font-weight: bold;
-            font-size: 18px;
-            color: #fff;
-        }
-        .potentiel {
-            font-weight: bold;
-            font-size: 18px;
-            color: #FFDD57; /* Couleur pour le potentiel */
         }
         .footer {
             text-align: center;
@@ -89,63 +63,46 @@
             font-size: 14px;
             margin-top: 30px;
         }
-    </style>
-</head>
-<body>
-
-    <div class="container">
-        <h1>Scalping</h1>
-
-        <!-- Sélecteur de paire -->
-        <div>
-            <label for="pair-selector" style="color: #bbb;">Sélectionner la paire :</label>
-            <select id="pair-selector">
-                <option value="XRPUSDT">XRP/USDT</option>
-                <option value="BTCUSDT">BTC/USDT</option>
-                <option value="ETHUSDT">ETH/USDT</option>
-                <option value="ADAUSDT">ADA/USDT</option>
-                <option value="SOLUSDT">SOL/USDT</option>
-            </select>
-        </div>
-
-        <div class="info">
-            <p class="pair-name">Paire actuelle : <span id="pair">XRP/USDT</span></p>
-            <p>Prix actuel de <span id="pair-display">XRP/USDT</span> : <span id="price">Chargement...</span></p>
-            <p class="signal">Signal : <span id="signal">Aucun signal</span></p>
-            <p class="potentiel">Potentiel : <span id="potentiel">Incalculé</span></p> <!-- Ajout du potentiel -->
-        </div>
-
-        <div class="tp-sl-info">
-            <p>Take Profit (TP) : <span id="tp" class="value">Calcul en cours...</span></p>
-            <p>Stop Loss (SL) : <span id="sl" class="value">Calcul en cours...</span></p>
-        </div>
-
-        <div id="last-updated">Dernière actualisation : Chargement...</div>
-
-        <!-- Graphique -->
-        <div id="price-chart">
-            <canvas id="chart"></canvas>
-        </div>
-    </div>
-
-    <div class="footer">
-        <p>Scalping automatisé - Données en temps réel de Binance</p>
-    </div>
-
-    <script>
+    </style> 
+ </head> 
+ <body> 
+  <div class="container"> 
+   <h1>Scalping</h1> 
+   <div> <label for="pair-selector" style="color: #bbb;">Sélectionner la paire :</label> <select id="pair-selector"> <option value="XRPUSDT">XRP/USDT</option> <option value="BTCUSDT">BTC/USDT</option> <option value="ETHUSDT">ETH/USDT</option> <option value="ADAUSDT">ADA/USDT</option> <option value="SOLUSDT">SOL/USDT</option> </select> 
+   </div> 
+   <div class="info"> 
+    <p>Paire actuelle : <span id="pair">XRP/USDT</span></p> 
+    <p>Prix actuel de <span id="pair-display">XRP/USDT</span> : <span id="price">Chargement...</span></p> 
+    <p>Signal : <span id="signal">Aucun signal</span></p> 
+    <p>Potentiel : <span id="potentiel">Incalculé</span></p> 
+   </div> 
+   <div class="tp-sl-info"> 
+    <p>Take Profit (TP) : <span id="tp">Calcul en cours...</span></p> 
+    <p>Stop Loss (SL) : <span id="sl">Calcul en cours...</span></p> 
+   </div> 
+   <div id="last-updated">
+    Dernière actualisation : Chargement...
+   </div> 
+   <div id="price-chart"> 
+    <canvas id="chart"></canvas> 
+   </div> 
+  </div> 
+  <div class="footer"> 
+   <p>Scalping automatisé - Données en temps réel de Binance</p> 
+  </div> 
+  <script>
         let selectedPair = 'XRPUSDT';
-        const tpPercentage = 0.3;  // 0.3% de TP
-        const slPercentage = 1;    // 1% de SL
+        const tpPercentage = 0.3;
+        const slPercentage = 1;
         let chart;
 
-        // Fonction pour récupérer les données de l'API Binance
         async function fetchPriceAndIndicators() {
             try {
                 const apiUrl = `https://api.binance.com/api/v3/klines?symbol=${selectedPair}&interval=1m&limit=100`;
                 const response = await fetch(apiUrl);
                 const data = await response.json();
-                const prices = data.map(d => parseFloat(d[4]));  // Close prices
-                const times = data.map(d => new Date(d[0])); // Convertir les timestamps en objets Date
+                const prices = data.map(d => parseFloat(d[4]));
+                const times = data.map(d => new Date(d[0]));
 
                 const lastPrice = prices[prices.length - 1];
                 document.getElementById('price').textContent = lastPrice.toFixed(4);
@@ -154,26 +111,13 @@
                 const emaShort = calculateEMA(prices, 9);
                 const emaLong = calculateEMA(prices, 21);
 
-                let signal = '';
-                if (emaShort > emaLong) {
-                    signal = 'ACHETER';
-                } else if (emaShort < emaLong) {
-                    signal = 'VENDRE';
-                } else {
-                    signal = 'AUCUN SIGNAL';
-                }
+                let signal = emaShort > emaLong ? 'ACHETER' : emaShort < emaLong ? 'VENDRE' : 'AUCUN SIGNAL';
                 document.getElementById('signal').textContent = signal;
 
-                const potentiel = calculatePotentiel(emaShort, emaLong);
-                document.getElementById('potentiel').textContent = potentiel;
-
+                document.getElementById('potentiel').textContent = calculatePotentiel(emaShort, emaLong);
                 calculateTpSl(lastPrice, signal);
 
-                // Mettre à jour la date et l'heure de la dernière actualisation
-                const currentTime = new Date();
-                document.getElementById('last-updated').textContent = `Dernière actualisation : ${currentTime.toLocaleTimeString()}`;
-
-                // Mettre à jour le graphique
+                document.getElementById('last-updated').textContent = `Dernière actualisation : ${new Date().toLocaleTimeString()}`;
                 updateChart(times, prices);
 
             } catch (error) {
@@ -182,7 +126,6 @@
             }
         }
 
-        // Calcul de l'EMA (Exponential Moving Average)
         function calculateEMA(prices, period) {
             const k = 2 / (period + 1);
             let ema = prices.slice(0, period).reduce((acc, price) => acc + price, 0) / period;
@@ -192,33 +135,86 @@
             return ema;
         }
 
-        // Calculer les niveaux TP et SL en tenant compte du prix actuel
         function calculateTpSl(price, signal) {
-            const tpMovement = price * (tpPercentage / 100);  // Mouvement en prix pour TP
-            const slMovement = price * (slPercentage / 100);  // Mouvement en prix pour SL
-
+            const tpMovement = price * (tpPercentage / 100);
+            const slMovement = price * (slPercentage / 100);
             let tp, sl;
 
             if (signal === 'ACHETER') {
-                tp = price + tpMovement;  // 0.3% de gain pour TP
-                sl = price - slMovement;  // 1% de perte pour SL
+                tp = price + tpMovement;
+                sl = price - slMovement;
             } else if (signal === 'VENDRE') {
-                tp = price - tpMovement;  // 0.3% de gain pour TP
-                sl = price + slMovement;  // 1% de perte pour SL
+                tp = price - tpMovement;
+                sl = price + slMovement;
             }
 
             document.getElementById('tp').textContent = tp.toFixed(4);
             document.getElementById('sl').textContent = sl.toFixed(4);
         }
 
-        // Calculer le potentiel du signal en fonction de l'écart entre EMA courte et longue
         function calculatePotentiel(emaShort, emaLong) {
             const difference = Math.abs(emaShort - emaLong);
+            return difference > 0.5 ? 'Fort' : difference > 0.2 ? 'Moyen' : 'Faible';
+        }
 
-            if (difference > 0.5) {
-                return 'Fort';
-            } else if (difference > 0.2) {
-                return 'Moyen';
+        function updateChart(times, prices) {
+            const chartData = {
+                labels: times,
+                datasets: [{
+                    data: prices,
+                    borderColor: 'rgba(0, 209, 178, 1)',
+                    borderWidth: 2,
+                    fill: false,
+                    pointRadius: 0
+                }]
+            };
+
+            if (!chart) {
+                const ctx = document.getElementById('chart').getContext('2d');
+                chart = new Chart(ctx, {
+                    type: 'line',
+                    data: chartData,
+                    options: {
+                        responsive: true,
+                        maintainAspectRatio: false,
+                        plugins: {
+                            legend: { display: false } // Suppression de la légende
+                        },
+                        scales: {
+                            x: {
+                                type: 'time',
+                                time: {
+                                    unit: 'minute',
+                                    tooltipFormat: 'll HH:mm',
+                                    displayFormats: { minute: 'HH:mm' },
+                                },
+                                title: { display: true, text: 'Temps' }
+                            },
+                            y: {
+                                title: { display: true, text: 'Prix (USDT)' },
+                                ticks: { beginAtZero: false }
+                            }
+                        }
+                    }
+                });
+            } else {
+                chart.data.labels = times;
+                chart.data.datasets[0].data = prices;
+                chart.update();
+            }
+        }
+
+        document.getElementById('pair-selector').addEventListener('change', (e) => {
+            selectedPair = e.target.value;
+            document.getElementById('pair').textContent = selectedPair;
+            fetchPriceAndIndicators();
+        });
+
+        setInterval(fetchPriceAndIndicators, 60000);
+        fetchPriceAndIndicators();
+    </script> 
+ 
+</body></html> 'Moyen';
             } else {
                 return 'Faible';
             }
