--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="fr"> 
- <head> 
-  <meta charset="UTF-8"> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>Scalping</title> 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script> <!-- Adapter pour les dates --> 
-  <style>
+<head> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Scalping</title> 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script> 
+    <style>
         body {
             font-family: 'Roboto', sans-serif;
             background-color: #181818;
@@ -63,34 +63,60 @@
             font-size: 14px;
             margin-top: 30px;
         }
+        .disclaimer {
+            font-size: 12px;
+            color: #888;
+            max-width: 800px;
+            margin: auto;
+            text-align: center;
+            margin-top: 20px;
+        }
     </style> 
- </head> 
- <body> 
-  <div class="container"> 
-   <h1>Scalping</h1> 
-   <div> <label for="pair-selector" style="color: #bbb;">Sélectionner la paire :</label> <select id="pair-selector"> <option value="XRPUSDT">XRP/USDT</option> <option value="BTCUSDT">BTC/USDT</option> <option value="ETHUSDT">ETH/USDT</option> <option value="ADAUSDT">ADA/USDT</option> <option value="SOLUSDT">SOL/USDT</option> </select> 
-   </div> 
-   <div class="info"> 
-    <p>Paire actuelle : <span id="pair">XRP/USDT</span></p> 
-    <p>Prix actuel de <span id="pair-display">XRP/USDT</span> : <span id="price">Chargement...</span></p> 
-    <p>Signal : <span id="signal">Aucun signal</span></p> 
-    <p>Potentiel : <span id="potentiel">Incalculé</span></p> 
-   </div> 
-   <div class="tp-sl-info"> 
-    <p>Take Profit (TP) : <span id="tp">Calcul en cours...</span></p> 
-    <p>Stop Loss (SL) : <span id="sl">Calcul en cours...</span></p> 
-   </div> 
-   <div id="last-updated">
-    Dernière actualisation : Chargement...
-   </div> 
-   <div id="price-chart"> 
-    <canvas id="chart"></canvas> 
-   </div> 
-  </div> 
-  <div class="footer"> 
-   <p>Scalping automatisé - Données en temps réel de Binance</p> 
-  </div> 
-  <script>
+</head> 
+<body> 
+    <div class="container"> 
+        <h1>Scalping</h1> 
+        <div> 
+            <label for="pair-selector" style="color: #bbb;">Sélectionner la paire :</label> 
+            <select id="pair-selector"> 
+                <option value="XRPUSDT">XRP/USDT</option> 
+                <option value="BTCUSDT">BTC/USDT</option> 
+                <option value="ETHUSDT">ETH/USDT</option> 
+                <option value="ADAUSDT">ADA/USDT</option> 
+                <option value="SOLUSDT">SOL/USDT</option> 
+            </select> 
+        </div> 
+
+        <div class="info"> 
+            <p>Paire actuelle : <span id="pair">XRP/USDT</span></p> 
+            <p>Prix actuel de <span id="pair-display">XRP/USDT</span> : <span id="price">Chargement...</span></p> 
+            <p>Signal : <span id="signal">Aucun signal</span></p> 
+            <p>Potentiel : <span id="potentiel">Incalculé</span></p> 
+        </div> 
+
+        <div class="tp-sl-info"> 
+            <p>Take Profit (TP) : <span id="tp">Calcul en cours...</span></p> 
+            <p>Stop Loss (SL) : <span id="sl">Calcul en cours...</span></p> 
+        </div> 
+
+        <div id="last-updated">
+            Dernière actualisation : Chargement...
+        </div> 
+
+        <div id="price-chart"> 
+            <canvas id="chart"></canvas> 
+        </div> 
+    </div> 
+
+    <div class="footer"> 
+        <p>Scalping automatisé - Données en temps réel de Binance</p> 
+        <p class="disclaimer">
+            Avertissement : Ce site ne fournit pas de conseils en investissement. Le trading comporte des risques et peut entraîner des pertes importantes. 
+            Assurez-vous de bien comprendre les risques avant d'investir. L'utilisation de ces informations se fait à vos propres risques.
+        </p>
+    </div> 
+
+    <script>
         let selectedPair = 'XRPUSDT';
         const tpPercentage = 0.3;
         const slPercentage = 1;
@@ -158,44 +184,12 @@
         }
 
         function updateChart(times, prices) {
-            const chartData = {
-                labels: times,
-                datasets: [{
-                    data: prices,
-                    borderColor: 'rgba(0, 209, 178, 1)',
-                    borderWidth: 2,
-                    fill: false,
-                    pointRadius: 0
-                }]
-            };
-
+            const ctx = document.getElementById('chart').getContext('2d');
             if (!chart) {
-                const ctx = document.getElementById('chart').getContext('2d');
                 chart = new Chart(ctx, {
                     type: 'line',
-                    data: chartData,
-                    options: {
-                        responsive: true,
-                        maintainAspectRatio: false,
-                        plugins: {
-                            legend: { display: false } // Suppression de la légende
-                        },
-                        scales: {
-                            x: {
-                                type: 'time',
-                                time: {
-                                    unit: 'minute',
-                                    tooltipFormat: 'll HH:mm',
-                                    displayFormats: { minute: 'HH:mm' },
-                                },
-                                title: { display: true, text: 'Temps' }
-                            },
-                            y: {
-                                title: { display: true, text: 'Prix (USDT)' },
-                                ticks: { beginAtZero: false }
-                            }
-                        }
-                    }
+                    data: { labels: times, datasets: [{ data: prices, borderColor: 'rgba(0, 209, 178, 1)', borderWidth: 2, fill: false, pointRadius: 0 }] },
+                    options: { responsive: true, maintainAspectRatio: false, scales: { x: { type: 'time', time: { unit: 'minute' } }, y: { beginAtZero: false } } }
                 });
             } else {
                 chart.data.labels = times;
@@ -205,6 +199,16 @@
         }
 
         document.getElementById('pair-selector').addEventListener('change', (e) => {
+            selectedPair = e.target.value;
+            fetchPriceAndIndicators();
+        });
+
+        setInterval(fetchPriceAndIndicators, 60000);
+        fetchPriceAndIndicators();
+    </script> 
+
+
+</body></html>ector').addEventListener('change', (e) => {
             selectedPair = e.target.value;
             document.getElementById('pair').textContent = selectedPair;
             fetchPriceAndIndicators();
